@@ -1,3 +1,5 @@
+- ignore environment variables CXXFLAGS, CXXLDFLAGS (#26) - thanks @hroncok for report
+
 0.24 2022-04-19
 - support environment variables CXX, CXXFLAGS, CXXLDFLAGS - thanks @dpryan79 for suggestion
 
